bk_ida/gccida/c2/recog_for_combine
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10227:9: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees = undobuf_0.frees; 
        ^~~~~~~~~
        undobuf
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10228:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10229:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10229:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10236:15: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
frees->next = undobuf_0.undos; 
              ^~~~~~~~~
              undobuf
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10237:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = frees; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10313:1: error: use of undeclared identifier 'reg_dead_regno'
reg_dead_regno = v33; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10316:1: error: use of undeclared identifier 'reg_dead_endregno'
reg_dead_endregno = v33 + 1; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10317:1: error: use of undeclared identifier 'reg_dead_flag'
reg_dead_flag = 0; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10326:6: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
if ( reg_dead_flag ) 
     ^~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10328:6: error: use of undeclared identifier 'reg_dead_flag'; did you mean 'reg_dead_at_p'?
if ( reg_dead_flag != 1 ) 
     ^~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10332:47: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
if ( find_regno_note( nonnote_insn, REG_DEAD, reg_dead_regno) ) 
                                              ^~~~~~~~~~~~~~
                                              reg_dead_at_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10357:7: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
v41 = reg_dead_regno; 
      ^~~~~~~~~~~~~~
      reg_dead_at_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10358:6: error: use of undeclared identifier 'reg_dead_regno'; did you mean 'reg_dead_at_p'?
if ( reg_dead_regno < reg_dead_endregno ) 
     ^~~~~~~~~~~~~~
     reg_dead_at_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:400:12: note: 'reg_dead_at_p' declared here
static int reg_dead_at_p        PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10358:23: error: use of undeclared identifier 'reg_dead_endregno'
if ( reg_dead_regno < reg_dead_endregno ) 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10362:15: error: use of undeclared identifier 'reg_dead_endregno'
if ( ++v41 >= reg_dead_endregno ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10385:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v35 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v34] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10398:1: error: use of undeclared identifier 'reg_dead_endregno'
reg_dead_endregno = v40 + v33; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/combine.c:10399:1: error: use of undeclared identifier 'reg_dead_flag'
reg_dead_flag = 0; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_for_combine/src/obj/combine.o] Error 1
